# CSE201_prototype

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Defense.md  Doxyfile  Paper.cpp  Paper.h  Presentation.md  README.md  REST.md  TRY GHJU.md  archives.txt  contributor_list.md  csvfile.cpp  csvfile.h  declaration_knn.cpp  err  example.csv  format.py  main.cpp  references.cpp  references.hpp  state.json  substring pattern matching  testxml.cpp  toparts.json  topics.json  utils.py
Data fetching/: file.cpp  get.cpp  getauthors.py  join.cpp  parse.cpp  testxml.cpp
Data fetching/crawler/: crawler.cpp  crawler.hpp  crawlerc.cpp  crawlerc.hpp  fetching.hpp  primitives.hpp  references.cpp  references.hpp  test.cpp
GUI/: main.cpp
GUI/TestGUI/: TestGUI.pro  display_id.cpp  display_id.h  info_user.cpp  info_user.h  main.cpp  new_id.cpp  new_id.h  user_info.cpp  window_home.h  window_int_modif.cpp  window_int_modif.h  window_main.cpp  window_main.h  windows_precise.h
Recommendation Algorithms/: LinearRegression.py  knn.cpp
Recommendation Algorithms/TFIDF/: README  tfidf.cpp  tfidf.hpp  tfidf_arxiv.cpp
Recommendation Algorithms/matfac/: factorization.hpp
TestGUI/: TestGUI.pro  info_user.h
data_engineering/: Matrix.cpp  Matrix.h  Paper.h  PapersReader.h  Reader.cpp  Reader.h  References.txt  ReferencesReader.cpp  ReferencesReader.h  Source.cpp  csvfile.cpp  csvfile.h  example.csv  getauthors.py  main.cpp
outfolder/: 3.txt
src/: CMakeLists.txt
src/GUI/: main.cpp
src/GUI/GUI_final/: GUI_final.pro  auto_update.cpp  auto_update.h  auto_update_label.cpp  client.cpp  client.h  display_id.cpp  display_like.cpp  info_user.h  json.h  main.cpp  new_id.cpp  primitives.h  resources.qrc  tools.cpp  tools.h  window_int_modif.cpp  window_int_modif.h  window_main.cpp
src/GUI/TestGUI/: TestGUI.pro  auto_update.h  auto_update_label.cpp  auto_update_label.h  client.cpp  counter.cpp  display_id.cpp  display_id.h  display_like.cpp  display_like.h  info_user.cpp  info_user.h  main.cpp  new_id.cpp  new_id.h  resources.qrc  user_info.cpp  window_home.cpp  window_home.h  window_int_modif.h  window_main.cpp  window_main.h  windows_precise.cpp  windows_precise.h
src/GUI/TestGUI/TestGUI/: TestGUI.pro  TestGUI.pro.user.4.8-pre1  auto_update.cpp  auto_update_label.cpp  client.cpp  client.h  counter.cpp  counter.h  display_id.cpp  display_like.cpp  info_page.h  info_user.cpp  main.cpp  primitives.h  window_home.cpp  window_int_modif.cpp  window_main.cpp  window_main.h  windows_precise.h
src/database/: CMakeLists.txt  Matrix.cpp  Matrix.h  Paper.cpp  Paper.h  PapersReader.cpp  PapersReader.h  Reader.cpp  Reader.h  ReferencesReader.cpp  ReferencesReader.h  Source.cpp  Summaries.cpp  Summaries.h  Tests.cpp  Vectors.cpp  Vectors.h  accessor.cpp  driver.cpp  driver.hpp  primitives.hpp  randomaccess.hpp  test.txt
src/database/server/: server.cpp
src/engine/: CMakeLists.txt  MinHash.cpp  MinHash.hpp  MinHash_test.cpp  clustering.cpp  clustering.hpp  clusteringlast.cpp  clusteringlast.hpp  declaration_knn.cpp  declaration_knn.hpp  knn.cpp  mat_fac_eigen.cpp  matfac.py  minhash.py  svd.cpp  tfidfinterface.cpp  tfidfinterface.hpp
src/engine/TFIDF/: CMakeLists.txt  README  tfidf.cpp  tfidf.hpp  tfidf2.cpp  tfidf2.hpp  tfidf_arxiv.cpp  tfidf_interface.hpp  tfidf_iterative.cpp  tfidf_iterative.hpp  tfidf_test2.cpp  tfidfinterface.cpp  tfidfinterface.hpp
src/engine/clustering/: README  clustering.cpp  clustering.hpp  clusteringlast.cpp  clusteringlast.hpp  tes_clustering.cpp  test_clustering.cpp  test_clusteringlast.cpp
src/engine/clustering_simplified/: README  clustering2.cpp  clustering2.hpp  test_clustering2.cpp
src/engine/linreg/: LinearRegression.h  LinearRegression.py
src/engine/matfac/: factorization.hpp  mat_fac_test_with_database.cpp  matfac.hpp
src/executables/: CMakeLists.txt  cluster.cpp  crawl.cpp  download_references.cpp  runKNN.cpp  runMF.cpp  runMinHash.cpp  runtfidf.cpp
src/fetching/: CMakeLists.txt  bloom.cpp  bloom.hpp  boyermoore.cpp  crawler.cpp  crawler.hpp  pdf++.cpp  primitives.hpp  quickrefs.cpp  quickrefs.hpp  references.cpp  references.hpp
src/server/: CMakeLists.txt  a.out  client.cpp  client.hpp  learn.cpp  primitives.hpp  server.cpp  server2.cpp  server3.cpp  server4.cpp  server5.cpp  server6.cpp  server7.cpp  server8.cpp  test_server.cpp  tools.cpp  tools.hpp  working_server.cpp
tests/: CMakeLists.txt  crawlertest.cpp  testmain.hpp
tests/fetching/: CMakeLists.txt  crawlertest.cpp  kortchemski.cpp  test_references.cpp  testmain.hpp
